--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,42 @@ main {
     text-align: left; /* Improve paragraph readability */
 }
 
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+ font-family: Poppins, serif;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+ font-family: Poppins, serif;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+ font-family: Poppins, serif;
+}
+
+.contact {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.contact h2 {
+ font-family: Poppins, serif;
+}
 
 /* Footer styles */
 footer {
